--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('./bg.jpg');
+    background-image: url('../assets/images/bg.jpg');
     /* Set the background image */
     background-size: cover;
     /* Ensure the image covers the entire wrapper */
